# plAIgiarized_new

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  backend-env-vars  base_model.py  build-diagnostic.sh  build.sh  debug-build-script.sh  diagnostic.sh  frontend-env-vars  next.config.js  package.json  pyproject.toml  pytest.ini  requirements.txt  storage_service.py  tailwind.config.js  vercel-build.sh  vercel-debug.sh  vercel-diagnostic.sh  vercel.json
.github/workflows/: auto-sync.yaml  ci-cd-pipeline.yaml
.next/: trace
.next/cache/: .rscinfo
.next/server/: edge-runtime-webpack.js  middleware-manifest.json  middleware.js  server-reference-manifest.json
app/utils/: auth.ts  (+2 more)
config/: constants.ts  themes.ts
database/: plaigiarized.db  students.json  users.json
docs/: SETUP.md
extension/: manifest.json  popup.html
lib/: auth.ts
plAIgiarized.egg-info/: PKG-INFO  SOURCES.txt
plaigiarized-next/: .eslintrc.js  middleware.ts  package.json
prisma/: schema.prisma
requirements/: ai.txt  base.txt  dev.txt  docs.txt  full.txt  mobile.txt
scripts/: test-connections.ts
src/: server.ts
tests/: conftest.py  test_analysis.py  test_api.py  test_backup.py  test_baseline.py  test_cache.py  test_config.py  test_core.py  test_dashboard.py  test_database.py  test_detection.py  test_export.py  test_feedback.py  test_health.py  test_logging.py  test_metrics.py  test_notification.py  test_ocr.py  test_progress.py  test_report.py  test_reporting.py  test_scheduler.py  test_security.py  test_storage.py  test_user.py  test_validation.py  test_web.py
(+344 files in other folders)
