[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plAIgiarized"
version = "0.1.0"
description = "AI-powered teaching assistant with advanced document analysis"
readme = "README.md"
authors = [
    {name = "Mark Keith", email = "Mkeith.developer@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "nltk",
    "numpy",
    "scikit-learn",
    "torch",
    "transformers",
    "pyjwt",
    "bcrypt"
]

[project.urls]
Homepage = "https://github.com/Mkeith83/plAIgiarized"

[project.scripts]
plaigiarized = "plAIgiarized.launcher:main"
plaigiarized-mobile = "plAIgiarized.mobile.launcher:main"

[tool.setuptools]
packages = ["plAIgiarized"]
package-dir = {"" = "src"}